--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.3.3</version>
+            </plugin>
         </plugins>
     </build>
 
