--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,44 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.3.3</version>
+                <groupId>io.fabric8</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.16.4</version>
+                <executions>
+                    <execution>
+                        <id>Build docker image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <images>
+                        <image>
+                            <name>default/${project.artifactId}</name>
+                            <build>
+                                <from>java:8</from>
+                                <cmd>
+                                    <shell>java -cp 'lib/*' botoss.Consumer</shell>
+                                </cmd>
+                                <assembly>
+                                    <inline>
+                                        <dependencySet>
+                                            <outputDirectory>lib</outputDirectory>
+                                        </dependencySet>
+                                        <files>
+                                            <file>
+                                                <source>${project.build.directory}/${project.build.finalName}.jar</source>
+                                                <outputDirectory>lib</outputDirectory>
+                                            </file>
+                                        </files>
+                                    </inline>
+                                </assembly>
+                            </build>
+                        </image>
+                    </images>
+                </configuration>
             </plugin>
         </plugins>
     </build>
