--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,11 @@
             <artifactId>json</artifactId>
             <version>20170516</version>
         </dependency>
-
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
+        </dependency>
     </dependencies>
 
 </project>
